--- a/packages/website/src/app.html
+++ b/packages/website/src/app.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-theme="light">
 	<head>
 		<meta charset="utf-8" />
 		<link rel="icon" href="%sveltekit.assets%/favicon.ico" />
@@ -15,7 +15,7 @@
 		<meta name="theme-color" content="#334155" />
 		%sveltekit.head%
 	</head>
-	<body data-sveltekit-preload-data="hover">
+	<body data-sveltekit-preload-data="hover" class="bg-white dark:bg-slate-800">
 		<div style="display: contents">%sveltekit.body%</div>
 	</body>
 </html>
