--- a/packages/website/src/app.html
+++ b/packages/website/src/app.html
@@ -13,6 +13,7 @@
 		<link rel="icon" sizes="16x16" type="image/png" href="%sveltekit.assets%/favicon-16x16.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
 		<meta name="theme-color" content="#334155" />
+		<meta name="apple-itunes-app" content="app-id=6463644660" />
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover" class="bg-white dark:bg-slate-800">
